--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>Início em Blog do André</title>
+    <title>{% block titulo %}{% endblock %} Blog do André</title>
 
     {% include 'parcials/__head.html' %}
 </head>
